[package]
name = "zyte-api-rs"
version = "0.1.1"
edition = "2021"
description = "Use the Zyte API Proxy -- Unofficial & Unstable"
license = "MIT"
homepage = "https://github.com/isaacimholt/zyte-api-rs"
repository = "https://github.com/isaacimholt/zyte-api-rs"
documentation = "https://github.com/isaacimholt/zyte-api-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
http = "0.2.9"
http-serde = "1.1.2"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_with = "3.0.0"
